--- a/src/assets/templates/footer.html
+++ b/src/assets/templates/footer.html
@@ -4,7 +4,7 @@
           <ul class="d-flex">
              <li><a href="">Terms</a></li>
              <li><a href="">Privacy</a></li>
-             <li><a href="">Zkfair.io</a></li>
+             <li><a href="">Monad.xyz</a></li>
           </ul>
        </div>
        <div class="socialMedia">
