--- a/src/assets/templates/header.html
+++ b/src/assets/templates/header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="container-fluid d-flex align-items-center justify-content-between">
-       <h1 id="logo"><img src="/assets/images/zkfair.svg" alt=""></h1>
+       <h1 id="logo"><img src="/assets/images/monadns.svg" alt=""></h1>
        <div class="controls-content">
           <nav>
              <ul class="d-flex">
@@ -17,10 +17,10 @@
              </ul>
           </nav>
           <div class="network-select dropdown">
-             <a class="dropdown-toggle w-100 d-block" href="javascript:;">Zkfair Mainnet</a>
+             <a class="dropdown-toggle w-100 d-block" href="javascript:;">Monad Mainnet</a>
              <ul class="dropdown-menu">
                 <li><span class="color-red">Select Network</span></li>
-                <li><a href="">Zkfair Mainnet</a></li>
+                <li><a href="">Monad Mainnet</a></li>
              </ul>
           </div>
        </div>
