--- a/src/assets/templates/registred.html
+++ b/src/assets/templates/registred.html
@@ -1,7 +1,7 @@
 <main>
     <header>
        <div class="container-fluid d-flex align-items-center justify-content-between">
-          <h1 id="logo"><img src="/assets/images/zkfair.svg" alt=""></h1>
+          <h1 id="logo"><img src="/assets/images/monadns.svg" alt=""></h1>
           <div class="controls-content">
              <nav>
                 <ul class="d-flex">
@@ -18,10 +18,10 @@
                 </ul>
              </nav>
              <div class="network-select dropdown">
-                <a class="dropdown-toggle w-100 d-block" href="javascript:;">Zkfair Mainnet</a>
+                <a class="dropdown-toggle w-100 d-block" href="javascript:;">Monad Mainnet</a>
                 <ul class="dropdown-menu">
                    <li><span class="color-red">Select Network</span></li>
-                   <li><a href="">Zkfair Mainnet</a></li>
+                   <li><a href="">Monad Mainnet</a></li>
                 </ul>
              </div>
           </div>
@@ -34,8 +34,7 @@
              <form action="">
                 <img src="/assets/images/search-icon.svg" alt=""><input type="text" placeholder="Search your domain name">
                 <select id="domain-choise" name="">
-                   <option value="zkfair">.zkf</option>
-                   <option value="other">.other</option>
+                   <option value="monad">.mon</option>
                 </select>
                 <button>SEARCH</button>
              </form>
@@ -73,9 +72,9 @@
                 <div class="pane" id="tab1">
                    <h2>My Domains</h2>
                    <ul class="list">
-                      <li>egeninpipisini.zkf</li>
-                      <li>ramazanyesin.zkf</li>
-                      <li>emredeizlesin.zkf</li>
+                      <li>egeninpipisini.mon</li>
+                      <li>ramazanyesin.mon</li>
+                      <li>emredeizlesin.mon</li>
                    </ul>
                 </div>
                 <div class="pane" id="tab2">Controller</div>
@@ -91,7 +90,7 @@
           <ul class="d-flex">
              <li><a href="">Terms</a></li>
              <li><a href="">Privacy</a></li>
-             <li><a href="">Zkfair.io</a></li>
+             <li><a href="">Monad.xyz</a></li>
           </ul>
        </div>
        <div class="socialMedia">
