--- a/src/assets/templates/search.html
+++ b/src/assets/templates/search.html
@@ -2,8 +2,7 @@
     <form action="">
        <img src="/assets/images/search-icon.svg" alt=""><input type="text" placeholder="Search your domain name">
        <select id="domain-choise" name="">
-          <option value="zkfair">.zkf</option>
-          <option value="other">.other</option>
+          <option value="monad">.mon</option>
        </select>
        <button>SEARCH</button>
     </form>
