--- a/src/assets/templates/sayac.html
+++ b/src/assets/templates/sayac.html
@@ -1,7 +1,7 @@
 <main>
     <header>
        <div class="container-fluid d-flex align-items-center justify-content-between">
-          <h1 id="logo"><img src="/assets/images/zkfair.svg" alt=""></h1>
+          <h1 id="logo"><img src="/assets/images/monadns.svg" alt=""></h1>
           <div class="controls-content">
              <nav>
                 <ul class="d-flex">
@@ -18,10 +18,10 @@
                 </ul>
              </nav>
              <div class="network-select dropdown">
-                <a class="dropdown-toggle w-100 d-block" href="javascript:;">Zkfair Mainnet</a>
+                <a class="dropdown-toggle w-100 d-block" href="javascript:;">Monad Mainnet</a>
                 <ul class="dropdown-menu">
                    <li><span class="color-red">Select Network</span></li>
-                   <li><a href="">Zkfair Mainnet</a></li>
+                   <li><a href="">Monad Mainnet</a></li>
                 </ul>
              </div>
           </div>
@@ -47,7 +47,7 @@
           <ul class="d-flex">
              <li><a href="">Terms</a></li>
              <li><a href="">Privacy</a></li>
-             <li><a href="">Zkfair.io</a></li>
+             <li><a href="">Monad.xyz</a></li>
           </ul>
        </div>
        <div class="socialMedia">
